--- a/src/css/index.css
+++ b/src/css/index.css
@@ -207,6 +207,7 @@
     color: #ffd700;            /* or */
     text-align: center;
     padding: 1rem;
+    
   }
   .footer__info {
     margin-bottom: 1rem;
@@ -280,6 +281,7 @@
     transition: opacity 0.5s ease-in-out;
     text-align: center;
     padding: 1rem;
+    background-color: #1a2430;
   }
   .carousel__item.active {
     display: block; /
